--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
     "test": "echo \"No test specified\" && exit 0",
-    "dev": "quasar dev"
+    "dev": "set NODE_OPTIONS=--openssl-legacy-provider&&quasar dev"
   },
   "dependencies": {
     "axios": "^0.21.1",
